devscripts (2.10.15) UNRELEASED; urgency=low

  [ Patrick Schoenfeld ]
  * checkbashisms: Add a check for the $(<) bashism (which is catting a file)
    (Closes: #463743)

  [ Adam D. Barratt ]
  * checkbashisms:
    + Replace use of non-existent fail() with die()
    + Correct the fix for #461653. >& is permitted by POSIX, &> isn't. Thanks
      to Sven Joachim.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sun, 03 Feb 2008 23:18:33 +0000

devscripts (2.10.14) unstable; urgency=low

  [ Adam D. Barratt ]
  * uscan:
    + Document the USCAN_DESTDIR configuration variable (Closes: #460717)
    + uscan: Correctly set the default User-Agent header (Closes: #462770)
  * bts:
    + Fix downloading of named attachments (Closes: #460850)
    + Add support for setting X-Debbugs-No-Ack (Closes: #458973)
  * grep-excuses: Update wipnity functionality in line with the move of
    testing.pl to release.d.o
  * checkbashisms:
    + Warn about the use of >& and &> (Closes: #461653)
    + Bring the script largely back in to sync with lintian's checks/scripts:
      - don't check scripts that appear to be shell scripts but aren't
        (Closes: #463257)
      - don't flag potential issues if they occur inside single quotes
      - separate out those issues that should only be flagged if they occur
        inside quoted strings
      - catch the use of kill -[0-9] or -[A-Z], trap with signal numbers
        and [[ foo ]]
  * deb-reversion: Support passing -b / --force-bad-version to dch
    (Closes: #461557)
  * mass-bug: Allow setting of tags. Thanks to Pierre Habouzit for the
    patch (Closes: #462649)
  * debcommit: Allow the commit message to be edited before passing it
    to the VCS. Thanks to Patrick Schoenfeld for the patch (Closes: #462758)
  * debuild: Pass -j through to dpkg-buildpackage (Closes: #461239)
  * tagpending: Use "bts select" instead of wget where possible
  * dget: Correctly parse arguments to --path (Closes: #460970)
  * Packaging changes